# railway-checkin-rs

./: Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: api.rs  main.rs  notify.rs
