[package]
name = "railway-checkin-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]

[dependencies]
anyhow = "1.0.71"
ctrlc = { version = "3.4.0", features = ["termination"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.163", features = ["derive"] }
